--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <tr>
       <td style="color:grey;" colspan="3">
         <p style="font-size:150%;">Profitez aussi de l'OUTLET jusqu'à -60%(1) !</p>
-        <p>Pour être sûr(e) de recevoir vos newsletters,ajoutez
+        <p>Pour être sûr(e) de recevoir vos newsletters, ajoutez
           "yvesrocher@nl.yves-rocher.be" à votre carnet d'adresses.</p>
         <p><a href="https://www.yves-rocher.be/" style="color:grey">
             Se désinscrire</a> |
@@ -69,7 +69,7 @@
 
     <tr>
       <td colspan="3">
-        <!--Début sous-tableau grandes images-->
+        <!--Début sous-tableau 4 : grandes images-->
         <table width="100%" cellspacing="0" cellpadding="0">
           <tr>
             <td>
@@ -88,19 +88,19 @@
             </td>
           </tr>
         </table>
-        <!--Fin sous-tableau grandes images-->
+        <!--Fin sous-tableau 4 : grandes images-->
       </td>
     </tr>
     <tr>
       <td colspan="3">
-        <!--Début sous-tableau 3-->
-        <table>
+        <!--Début sous-tableau 5-->
+        <table width="100%" cellspacing="0" cellpadding="0" style="color: brown">
           <tr style="text-transform: uppercase;">
             <td colspan="2">
-              <p>En magasin :</p>
+              <p>En <b>magasin</b> :</p>
             </td>
             <td colspan="2">
-              <p>En ligne :</p>
+              <p>En <b>ligne</b> :</p>
             </td>
           </tr>
           <tr>
@@ -108,11 +108,20 @@
               <p>Présentez cet e-mail à la caisse de votre magasin</p>
             </td>
             <td colspan="2">
-              <p>Indiquez le code FLASH10 lors de votre commande</p>
+              <p>Indiquez le code <b style="color: pink;">FLASH10</b><p>
+              <p>lors de votre commande</p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="img/cb_befr.png" alt="code-barre" width="50%">
+            </td>
+            <td>
+              <img src="img/truck.jpg" alt="camion" width="50%">
             </td>
           </tr>
         </table>
-        <!--Fin sous-tableau 3-->
+        <!--Fin sous-tableau 5-->
       </td>
     </tr>
   </table>
